added more functionality to js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <header>
+        <h1>
+
+        </h1>
+    </header>
+    <main>
+        <form class="userSubmit" action="#">
+            <label for="genreSelection">Genre</label>
+            <select name="genre" id="genre">
+                <option value="">Select Genre...</option>
+            </select>
+
+            <label for="yearSelection">Year</label>
+            <select name="year" id="year">
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+                <option value=""></option>
+
+            </select>
+
+            <button>Submit</button>
+        </form>
+
+        <section>
+            <ul class="printMovies">
+
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>Created at <a href="www.junocollege.com">Juno College of Technology</a> by Brodie Day and Sara Amiri. Movie suggestions by <a href="https://www.themoviedb.org/">The MOVIE DB</a></p>
+    </footer>
     <script src="./script.js"> </script>
 </body>
 </html>
