updated some parameter in the api

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <form class="userSubmit" action="#">
             <label for="genreSelection">Genre</label>
             <select name="genre" id="genre">
-                <option value="">Select Genre...</option>
+                <option value disabled selected>Select Genre...</option>
             </select>
 
             <label for="yearSelection">Year</label>
             <select name="year" id="year">
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
+                <option value disabled selected>Select Decade...</option>
+                <option value="1980">1980's</option>
+                <option value="1990">1990's</option>
+                <option value="2000">2000's</option>
+                <option value="2010">2010's</option>
+                <option value="2020">2020's</option>
 
             </select>
 
